@@ -42,12 +42,12 @@ describe 'pupmod' do
 
             it { is_expected.to contain_pupmod__conf('srv_domain').with({
               'setting' => 'srv_domain',
-              'value' => 'example.com'
+              'value' => facts[:domain]
             }) }
 
             it { is_expected.to contain_pupmod__conf('certname').with({
               'setting' => 'certname',
-              'value' => 'foo.example.com'
+              'value' => facts[:fqdn]
             }) }
 
             it { is_expected.to contain_pupmod__conf('vardir').with({
@@ -141,6 +141,9 @@ describe 'pupmod' do
                 is_expected.to contain_selboolean('puppetagent_manage_all_files')
               end
             end
+
+            it { is_expected.to contain_cron('puppet_crl_pull').with_ensure('absent') }
+
             context 'with_selinux_disabled' do
               let(:facts) {
                 _facts = @extras.merge(os_facts)
